--- a/TaskManager.csproj
+++ b/TaskManager.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="dapper" Version="2.1.35" />
+    <PackageReference Include="mysql.Data" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
