--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "default":"Server=localhost; database=TaskManager;Uid=root;Pwd=CST8250!;"
   }
 }
+
+
